--- a/Spotify-clone/app/scss/_nav.scss
+++ b/Spotify-clone/app/scss/_nav.scss
@@ -133,23 +133,21 @@ nav {
   position: absolute;
   top: 0;
   height: 100vh;
-  max-width: 400px;
   padding: 38px;
   background-color: $black;
   right: 0;
   flex-direction: column;
   z-index: 5;
-  @media (min-width: 443px) {
+  width: 400;
+  @media (max-width: 399px) {
     width: 100vw;
+  }
+  @media (min-width: 400px) {
+    width: 400px;
   }
   .menu {
     display: flex;
     flex-direction: column;
-    width: 400px;
-    @media (max-width: 400px) {
-      width: 100vw;
-      height: 100vh;
-    }
     a {
       color: $white;
       padding: 0 0 25px;
